FIX(style): unsetting overflow for add set

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -820,7 +820,7 @@ footer p {
     }
 
     /* Exclude set-filter from overflow */
-    .set-filter {
+    .set-filter, .select2, .select2-container {
         overflow: unset;
     }
 
